--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,3 +1,6 @@
+// Use the new SASS module system instead of deprecated @import
+@use 'sass:map';
+
 // 🔁 Responsive Breakpoints
 $breakpoints: (
   xs: 480px,
@@ -9,8 +12,8 @@ $breakpoints: (
 );
 
 @mixin respond-to($breakpoint) {
-  @if map-has-key($breakpoints, $breakpoint) {
-    @media (min-width: map-get($breakpoints, $breakpoint)) {
+  @if map.has-key($breakpoints, $breakpoint) {
+    @media (min-width: map.get($breakpoints, $breakpoint)) {
       @content;
     }
   } @else {
